# ustar

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cargo.toml.original  README.md  SNAPSHOT_STRATEGY.md  TODO.md  build.rs  clippy.toml
documents/: NMRStar Flavours.md  (+1 more)
ustar-parser/: Cargo.toml  build.rs
ustar-parser/src/: config.rs  error_core.rs  extended_errors.rs  lib.rs  sas_interface.rs  sas_walker.rs  simple_errors.rs  star.pest  star_ascii.pest  star_extended.pest
ustar-parser/tests/: error_handling_tests.rs  integration_tests.rs  line_column_index_tests.rs  parse_bmrb_stars.rs  parse_cod_cifs.rs  parse_dict_files.rs  parse_mmcif_files.rs  parse_nef_files.rs  parse_pdb_mmcifs.rs  parse_sas_test_files.rs  parser_tests.rs  sas_walker_tests.rs  snapshot_utils.rs  string_decomposition_tests.rs  test_data_download.rs
ustar-parser/tests/snapshots/: error_handling_tests__ascii_error_tag_instead_of_value.snap.zst  error_handling_tests__ascii_error_unclosed_string.snap.zst  error_handling_tests__ascii_error_unclosed_string_unzipped.snap.zst  error_handling_tests__basic_error_tag_instead_of_value.snap.zst  error_handling_tests__basic_error_unclosed_string.snap.zst  error_handling_tests__fancy_error_tag_instead_of_value.snap.zst  error_handling_tests__fancy_error_unclosed_string.snap.zst  parser_tests__comprehensive_example.snap.zst  parser_tests__comprehensive_example_crlf.snap.zst  parser_tests__comprehensive_example_crlf_unzipped.snap.zst  sas_walker_tests__comprehensive_example_walker_output.snap.diff  sas_walker_tests__comprehensive_example_walker_output.snap.zst  sas_walker_tests__comprehensive_example_walker_output_unzipped.snap.zst  sas_walker_tests__empty_loop_before_saveframe.snap.diff  sas_walker_tests__empty_loop_before_saveframe.snap.zst  sas_walker_tests__empty_loop_with_stop.snap.diff  sas_walker_tests__empty_loop_with_stop.snap.zst  sas_walker_tests__global_block_walker_output_unzipped.snap.zst  sas_walker_tests__global_with_loop_walker_output.snap.zst  sas_walker_tests__global_with_nested_walker_output.snap.zst  sas_walker_tests__loop_walker_output.snap.diff  sas_walker_tests__loop_walker_output.snap.zst  sas_walker_tests__multiline_and_frame_codes_unzipped.snap.zst  sas_walker_tests__nested_empty_loop.snap.diff  sas_walker_tests__nested_empty_loop.snap.zst  sas_walker_tests__nested_loop_walker_output.snap.diff  sas_walker_tests__nested_loop_walker_output.snap.zst  sas_walker_tests__sas_test_files_walker_output@3fke_cif.snap.diff  sas_walker_tests__sas_test_files_walker_output@3fke_cif.snap.zst  sas_walker_tests__sas_test_files_walker_output@bmr15334_3_str.snap.diff  sas_walker_tests__sas_test_files_walker_output@bmr15334_3_str.snap.zst  sas_walker_tests__sas_test_files_walker_output@bmr18587_3_str.snap.diff  sas_walker_tests__sas_test_files_walker_output@bmr18587_3_str.snap.zst  sas_walker_tests__sas_test_files_walker_output@bmr25679_3_str.snap.diff  sas_walker_tests__sas_test_files_walker_output@bmr25679_3_str.snap.zst  sas_walker_tests__sas_test_files_walker_output@bmr25839_3_str.snap.diff  sas_walker_tests__sas_test_files_walker_output@bmr25839_3_str.snap.zst  sas_walker_tests__sas_test_files_walker_output@breaker_str.snap.diff  sas_walker_tests__sas_test_files_walker_output@breaker_str.snap.zst  sas_walker_tests__sas_test_files_walker_output@loop1_str.snap.diff  (+14 more)
ustar-parser/tests/test_data/: comprehensive_example_crlf.star  mmcif_nef_v1_1_ascii.dic  semicolon_test_crlf.star  semicolon_test_lf.star  simple_benchmark.star  simple_comma_string.str  simple_example.expected  simple_star_file.star.expected  simple_star_file_windows.star
ustar-test-utils/: Cargo.toml
ustar-test-utils/src/: lib.rs  mock_http_client.rs  pest_format.rs  snapshot_utils.rs  test_data_download_utils.rs  test_data_utils.rs
ustar-test-utils/src/snapshots/: ustar_test_utils__snapshot_utils__cli_output_lf.snap.new  ustar_test_utils__snapshot_utils__comprehensive_example_with_tree.snap.new  ustar_test_utils__snapshot_utils__comprehensive_example_without_tree.snap.new  ustar_test_utils__snapshot_utils__error_handling_tests__snapshot_utils__error_handling_tests__ascii_error_unclosed_string.snap.new  ustar_test_utils__snapshot_utils__error_handling_tests__snapshot_utils__error_handling_tests__basic_error_unclosed_string.snap.new  ustar_test_utils__snapshot_utils__error_handling_tests__snapshot_utils__error_handling_tests__fancy_error_unclosed_string.snap.new  ustar_test_utils__snapshot_utils__parser_tests__comprehensive_example.snap.new  ustar_test_utils__snapshot_utils__parser_tests__comprehensive_example_crlf.snap.new  ustar_test_utils__snapshot_utils__sas_walker_tests__comprehensive_example_walker_output.snap.new  ustar_test_utils__snapshot_utils__sas_walker_tests__loop_walker_output.snap.new  ustar_test_utils__snapshot_utils__sas_walker_tests__saveframe_walker_output.snap.new  ustar_test_utils__snapshot_utils__sas_walker_tests__snapshot_utils__sas_walker_tests__multiline_and_frame_codes.snap.new  ustar_test_utils__snapshot_utils__sas_walker_tests__snapshot_utils__sas_walker_tests__simple_data_walker_output.snap.new  ustar_test_utils__snapshot_utils__simple_example_with_tree.snap.new  ustar_test_utils__snapshot_utils__simple_star_file_output.snap.new  ustar_test_utils__snapshot_utils__string_decomposition_tests__lf_semicolon_decomposed.snap.new  ustar_test_utils__snapshot_utils__test_input_star_output.snap.new
ustar-tools/: Cargo.toml
ustar-tools/src/: downloader_common.rs  dump_extractors.rs  lib.rs
ustar-tools/tests/: binary_integration_tests.rs  downloader_tests.rs  ustar_dumper_tests.rs
ustar-tools/tests/fixtures/: 1000001.cif  1abc.cif  bmr1000.str  bmrb_directory_list.html  cod_search_page.html  pdb_holdings.txt
ustar-tools/tests/snapshots/: binary_integration_tests__sas_demo_comprehensive_example.snap.zst  binary_integration_tests__ustar_parse_debugger_invalid_file.snap.zst  ustar_dumper_tests__cli_output_crlf.snap.zst  ustar_dumper_tests__cli_output_lf.snap.zst  ustar_dumper_tests__comprehensive_example_with_tree.snap.zst  (+5 more)
(+269 files in other folders)
