[workspace]
resolver = "2"
members = [
    "ustar-parser",
    "ustar-tools",
    "ustar-test-utils",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
rust-version = "1.83.0"
license = "LGPL-3.0-only"
repository = "https://github.com/varioustoxins/ustar"
homepage = "https://github.com/varioustoxins/ustar"

[workspace.dependencies]
# Core dependencies
pest = "2.8"
pest_derive = { version = "2.8", features = ["grammar-extras"] }
memchr = "2.7"

# Optional core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "7.2", features = ["fancy"] }
thiserror = { version = "2.0" }

# Shared dependencies (used by test-utils and tools)
flate2 = "1.0"
sha1 = "0.10"
reqwest = { version = "0.11.27", features = ["json", "gzip", "blocking", "stream"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }

# Dev dependencies
rstest = "0.18"
insta = "1.34"
indoc = "2.0"
tempfile = "3.8"

[workspace.lints.clippy]
expect_fun_call = "allow"
single_component_path_imports = "allow" 
new_without_default = "allow"
needless_borrows_for_generic_args = "allow"
ptr_arg = "allow"
useless_conversion = "allow"
let_and_return = "allow"
redundant_pattern_matching = "allow"
manual_is_multiple_of = "allow"
needless_range_loop = "allow"
implicit_saturating_sub = "allow"
useless_vec = "allow"

[profile.release]
debug = true