[package]
name = "ustar-parser"
description = "Lightweight STAR format parser for CIF, mmCIF, NMR-STAR, and other scientific data formats"
keywords = ["parser", "star", "cif", "mmcif", "crystallography"]
categories = ["parsing", "science"]
readme = "../README.md"
documentation = "https://docs.rs/ustar-parser"
exclude = [
    "tests/test_data/dicts/*.dic", 
    "tests/test_data/dicts/*.cif",
    "tests/test_data/bmrb_stars/*.str",
    "tests/test_data/cod_cifs/*.cif", 
    "tests/test_data/mmcif/*.cif",
    "tests/test_data/nef_examples/*.nef",
    "tests/test_data/nef_spec/*.nef",
    "tests/test_data/pdb_mmcifs/*.cif"
]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[lib]
name = "ustar"

[features]
default = ["extended-errors"]
extended-errors = ["miette", "thiserror"]
serde = ["dep:serde", "dep:serde_json"]
no-large-tests = ["ustar-test-utils/no-large-tests"]

[dependencies]
# Core - always needed
pest.workspace = true
pest_derive.workspace = true
memchr.workspace = true

# Optional features
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
miette = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
insta.workspace = true
indoc.workspace = true
tabled.workspace = true
indicatif.workspace = true
flate2.workspace = true
ustar-test-utils = { path = "../ustar-test-utils", version = "0.1.4" }
sha1 = "0.10"
