[package]
name = "ustar-test-utils"
description = "Shared test utilities for ustar crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# This crate provides test utilities and automatic test data download
exclude = ["**/.DS_Store"]

[features]
no-large-tests = []

[dependencies]
flate2.workspace = true
insta.workspace = true
similar = "2.6"
sha1.workspace = true
reqwest = { workspace = true, features = ["stream"] }
tokio = { workspace = true, features = ["rt", "macros"] }
zip = "2.1"

[dev-dependencies]
tempfile.workspace = true
