[package]
name = "ustar-tools"
description = "Command-line tools for STAR format parsing and processing"
keywords = ["cli", "star", "cif", "mmcif", "tools"]
categories = ["command-line-utilities", "science"]
readme = "../README.md"
documentation = "https://docs.rs/ustar-tools"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

exclude = ["**/.DS_Store"]

[lints]
workspace = true

[[bin]]
name = "ustar-dumper"
path = "src/bin/ustar-dumper.rs"

[[bin]]
name = "ustar-benchmark"
path = "src/bin/ustar-benchmark.rs"

[[bin]]
name = "ustar-parse-debugger"
path = "src/bin/ustar-parse-debugger.rs"

[[bin]]
name = "download-bmrb-stars"
path = "src/bin/download-bmrb-stars.rs"

[[bin]]
name = "download-cod-cifs"
path = "src/bin/download-cod-cifs.rs"

[[bin]]
name = "download-pdbs"
path = "src/bin/download-pdbs.rs"

[[bin]]
name = "sas-demo"
path = "src/bin/sas_demo.rs"

[[bin]]
name = "ustar-grammar-railroad"
path = "src/bin/ustar-grammar-railroad.rs"

[dependencies]
# Core parser
ustar_parser = { package = "ustar-parser", path = "../ustar-parser", version = "0.1.4", features = ["serde", "extended-errors"] }

# Core shared dependencies
pest.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true

# CLI-specific dependencies
clap = { version = "4.5", features = ["derive"] }
tabled = "0.16"
scraper = "0.19"
regex = "1"
rand = "0.8"
text_trees = "0.1"
pest_railroad = "0.1"

[dev-dependencies]
rstest.workspace = true
indicatif = "0.17"
insta.workspace = true
indoc.workspace = true
ustar-test-utils = { path = "../ustar-test-utils", version = "0.1.4" }
usvg = "0.45"